<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.j32u4ukh.ghost_island.MainActivity">

    <TextView
        android:id="@+id/storeInformation1"
        android:text="@string/storeInformation1"
        android:theme="@style/storeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/get_qrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:id="@+id/get_qrcode"
        android:layout_below="@+id/storeInformation1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/textViewInteractive"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/get_qrcode"
        android:layout_marginTop="14dp"
        android:text="@string/interactive01"
        android:theme="@style/storeTextView" />

</RelativeLayout>
